[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fdserver" 
version = "23.5.30"
description = "Field Day group logging server"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Michael Bridak", email="michael.bridak@gmail.com" },
]
dependencies = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console :: Curses",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Communications :: Ham Radio",
]

[project.urls]
"Homepage" = "https://github.com/mbridak/fdserver"
"Bug Tracker" = "https://github.com/mbridak/fdserver/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"fdserver.data" = ["*.*",]

[project.scripts]
fdserver = "fdserver.__main__:run"
